--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = vim/bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
 	ignore = dirty
+[submodule "vim/bundle/supertab"]
+	path = vim/bundle/supertab
+	url = https://github.com/ervandew/supertab.git
+	ignore = dirty
