--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = vim/bundle/Rainbow-Parenthesis
 	url = https://github.com/vim-scripts/Rainbow-Parenthesis.git
 	ignore = dirty
+[submodule "vim/bundle/snipmate"]
+	path = vim/bundle/snipmate
+	url = https://github.com/msanders/snipmate.vim.git
+	ignore = dirty
