--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 	path = vim/bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
 	ignore = dirty
+[submodule "vim/bundle/glsl"]
+	path = vim/bundle/glsl
+	url = https://github.com/vim-scripts/glsl.vim
