--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,7 @@
 [submodule "vim/bundle/glsl"]
 	path = vim/bundle/glsl
 	url = https://github.com/vim-scripts/glsl.vim
+	ignore = dirty
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = git@github.com:awreece/oh-my-zsh.git
