--- a/.gitmodules
+++ b/.gitmodules
@@ -35,4 +35,4 @@
 	url = https://github.com/altercation/vim-colors-solarized.git
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
-	url = git@github.com:awreece/oh-my-zsh.git
+	url = https://github.com/awreece/oh-my-zsh.git
