--- a/.gitmodules
+++ b/.gitmodules
@@ -44,3 +44,6 @@
 	path = vim/bundle/vim-go
 	url = https://github.com/fatih/vim-go
 	ignore = dirty
+[submodule "vim/bundle/typescript-vim"]
+	path = vim/bundle/typescript-vim
+	url = https://github.com/leafgarland/typescript-vim.git
